[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/tilemap/TileMap.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/tilemap/TileMapScene.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/icon.png" type="Texture" id=3]
[ext_resource path="res://scenes/tilemap/ScriptTileset.tres" type="TileSet" id=4]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float center_x = 0.0;
uniform float center_y = 0.0;
uniform float radius = 0.1;
uniform float ratio = 8.0;

void fragment(){
	float pct = distance(UV, vec2(center_x, center_y)) * ratio;
	vec3 color = vec3(pct);
  	COLOR = vec4(0.0, 0.0, 0.0, pct);
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/center_x = 0.0
shader_param/center_y = 0.0
shader_param/radius = 0.1
shader_param/ratio = 8.0

[sub_resource type="ImageTexture" id=4]
size = Vector2( 10, 10 )

[node name="Map" type="Node2D"]
script = ExtResource( 2 )

[node name="GameMap" type="TileMap" parent="."]
unique_name_in_owner = true
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 2, 0, 2, 9, 0, 3, 0, 196614, 4, 0, 196614, 5, 0, 196614, 6, 0, 196614, 7, 0, 196614, 8, 0, 196614, 9, 0, 196614, 10, 0, 196614, 11, 0, 196614, 12, 0, 196614, 13, 0, 196614, 14, 0, 196614, 15, 0, 196614, 16, 0, 196614, 17, 0, 196614, 18, 0, 196614, 19, 0, 196614, 20, 0, 196614, 21, 0, 196615, 65536, 0, 262144, 65537, 4, 0, 65538, 8, 0, 65539, 18, 0, 65540, 18, 0, 65541, 18, 0, 65542, 18, 0, 65543, 18, 0, 65544, 18, 0, 65545, 18, 0, 65546, 18, 0, 65547, 18, 0, 65548, 18, 0, 65549, 18, 0, 65550, 18, 0, 65551, 18, 0, 65552, 18, 0, 65553, 18, 0, 65554, 18, 0, 65555, 18, 0, 65556, 7, 0, 65557, 0, 327687, 131072, 0, 262144, 131073, 10, 0, 131074, 20, 0, 131075, 19, 0, 131076, 20, 0, 131077, 20, 0, 131078, 20, 0, 131079, 19, 0, 131080, 19, 0, 131081, 20, 0, 131082, 19, 0, 131083, 20, 0, 131084, 20, 0, 131085, 20, 0, 131086, 20, 0, 131087, 20, 0, 131088, 20, 0, 131089, 20, 0, 131090, 20, 0, 131091, 20, 0, 131092, 17, 0, 131093, 0, 327687, 196608, 0, 262144, 196609, 10, 0, 196610, 20, 0, 196611, 19, 0, 196612, 20, 0, 196613, 19, 0, 196614, 20, 0, 196615, 20, 0, 196616, 20, 0, 196617, 20, 0, 196618, 19, 0, 196619, 20, 0, 196620, 20, 0, 196621, 19, 0, 196622, 19, 0, 196623, 19, 0, 196624, 20, 0, 196625, 19, 0, 196626, 20, 0, 196627, 20, 0, 196628, 17, 0, 196629, 0, 327687, 262144, 0, 262144, 262145, 10, 0, 262146, 20, 0, 262147, 19, 0, 262148, 19, 0, 262149, 19, 0, 262150, 20, 0, 262151, 19, 0, 262152, 19, 0, 262153, 20, 0, 262154, 20, 0, 262155, 20, 0, 262156, 20, 0, 262157, 19, 0, 262158, 20, 0, 262159, 20, 0, 262160, 20, 0, 262161, 19, 0, 262162, 19, 0, 262163, 19, 0, 262164, 17, 0, 262165, 0, 327687, 327680, 0, 262144, 327681, 10, 0, 327682, 20, 0, 327683, 20, 0, 327684, 20, 0, 327685, 20, 0, 327686, 20, 0, 327687, 19, 0, 327688, 20, 0, 327689, 20, 0, 327690, 19, 0, 327691, 19, 0, 327692, 19, 0, 327693, 19, 0, 327694, 20, 0, 327695, 20, 0, 327696, 19, 0, 327697, 19, 0, 327698, 20, 0, 327699, 20, 0, 327700, 17, 0, 327701, 0, 327687, 393216, 0, 262144, 393217, 10, 0, 393218, 20, 0, 393219, 19, 0, 393220, 19, 0, 393221, 20, 0, 393222, 20, 0, 393223, 19, 0, 393224, 20, 0, 393225, 20, 0, 393226, 20, 0, 393227, 20, 0, 393228, 20, 0, 393229, 19, 0, 393230, 20, 0, 393231, 20, 0, 393232, 20, 0, 393233, 20, 0, 393234, 20, 0, 393235, 20, 0, 393236, 17, 0, 393237, 0, 327687, 458752, 0, 262144, 458753, 10, 0, 458754, 20, 0, 458755, 19, 0, 458756, 19, 0, 458757, 19, 0, 458758, 19, 0, 458759, 19, 0, 458760, 19, 0, 458761, 19, 0, 458762, 19, 0, 458763, 19, 0, 458764, 20, 0, 458765, 19, 0, 458766, 20, 0, 458767, 20, 0, 458768, 20, 0, 458769, 19, 0, 458770, 19, 0, 458771, 20, 0, 458772, 17, 0, 458773, 0, 327687, 524288, 0, 262144, 524289, 10, 0, 524290, 20, 0, 524291, 19, 0, 524292, 20, 0, 524293, 20, 0, 524294, 19, 0, 524295, 20, 0, 524296, 20, 0, 524297, 20, 0, 524298, 20, 0, 524299, 20, 0, 524300, 20, 0, 524301, 19, 0, 524302, 19, 0, 524303, 20, 0, 524304, 20, 0, 524305, 19, 0, 524306, 20, 0, 524307, 20, 0, 524308, 17, 0, 524309, 0, 327687, 589824, 0, 262144, 589825, 10, 0, 589826, 20, 0, 589827, 20, 0, 589828, 20, 0, 589829, 20, 0, 589830, 20, 0, 589831, 20, 0, 589832, 19, 0, 589833, 19, 0, 589834, 20, 0, 589835, 19, 0, 589836, 20, 0, 589837, 20, 0, 589838, 20, 0, 589839, 20, 0, 589840, 20, 0, 589841, 0, 131079, 589842, 0, 131079, 589843, 0, 131079, 589844, 17, 0, 589845, 0, 327687, 655360, 0, 262144, 655361, 10, 0, 655362, 20, 0, 655363, 19, 0, 655364, 20, 0, 655365, 20, 0, 655366, 19, 0, 655367, 20, 0, 655368, 19, 0, 655369, 20, 0, 655370, 20, 0, 655371, 19, 0, 655372, 19, 0, 655373, 19, 0, 655374, 20, 0, 655375, 20, 0, 655376, 20, 0, 655377, 20, 0, 655378, 20, 0, 655379, 20, 0, 655380, 17, 0, 655381, 0, 327687, 720896, 0, 262144, 720897, 10, 0, 720898, 20, 0, 720899, 19, 0, 720900, 19, 0, 720901, 19, 0, 720902, 19, 0, 720903, 20, 0, 720904, 19, 0, 720905, 20, 0, 720906, 20, 0, 720907, 20, 0, 720908, 20, 0, 720909, 19, 0, 720910, 19, 0, 720911, 19, 0, 720912, 19, 0, 720913, 19, 0, 720914, 19, 0, 720915, 19, 0, 720916, 17, 0, 720917, 0, 327687, 786432, 0, 262144, 786433, 10, 0, 786434, 20, 0, 786435, 20, 0, 786436, 20, 0, 786437, 20, 0, 786438, 19, 0, 786439, 20, 0, 786440, 20, 0, 786441, 20, 0, 786442, 19, 0, 786443, 19, 0, 786444, 20, 0, 786445, 20, 0, 786446, 20, 0, 786447, 20, 0, 786448, 20, 0, 786449, 20, 0, 786450, 20, 0, 786451, 19, 0, 786452, 17, 0, 786453, 0, 327687, 851968, 0, 262144, 851969, 10, 0, 851970, 20, 0, 851971, 19, 0, 851972, 19, 0, 851973, 19, 0, 851974, 19, 0, 851975, 20, 0, 851976, 19, 0, 851977, 20, 0, 851978, 20, 0, 851979, 19, 0, 851980, 20, 0, 851981, 20, 0, 851982, 19, 0, 851983, 19, 0, 851984, 19, 0, 851985, 20, 0, 851986, 20, 0, 851987, 19, 0, 851988, 17, 0, 851989, 0, 327687, 917504, 0, 262144, 917505, 10, 0, 917506, 20, 0, 917507, 19, 0, 917508, 20, 0, 917509, 20, 0, 917510, 20, 0, 917511, 20, 0, 917512, 19, 0, 917513, 20, 0, 917514, 20, 0, 917515, 19, 0, 917516, 19, 0, 917517, 20, 0, 917518, 19, 0, 917519, 20, 0, 917520, 19, 0, 917521, 20, 0, 917522, 20, 0, 917523, 19, 0, 917524, 17, 0, 917525, 0, 327687, 983040, 0, 262144, 983041, 10, 0, 983042, 20, 0, 983043, 19, 0, 983044, 20, 0, 983045, 19, 0, 983046, 19, 0, 983047, 19, 0, 983048, 19, 0, 983049, 20, 0, 983050, 19, 0, 983051, 19, 0, 983052, 19, 0, 983053, 20, 0, 983054, 19, 0, 983055, 20, 0, 983056, 19, 0, 983057, 20, 0, 983058, 20, 0, 983059, 20, 0, 983060, 17, 0, 983061, 0, 327687, 1048576, 0, 262144, 1048577, 10, 0, 1048578, 20, 0, 1048579, 20, 0, 1048580, 20, 0, 1048581, 19, 0, 1048582, 20, 0, 1048583, 19, 0, 1048584, 20, 0, 1048585, 20, 0, 1048586, 20, 0, 1048587, 20, 0, 1048588, 19, 0, 1048589, 20, 0, 1048590, 19, 0, 1048591, 20, 0, 1048592, 19, 0, 1048593, 19, 0, 1048594, 19, 0, 1048595, 20, 0, 1048596, 17, 0, 1048597, 0, 327687, 1114112, 0, 262144, 1114113, 10, 0, 1114114, 20, 0, 1114115, 20, 0, 1114116, 19, 0, 1114117, 19, 0, 1114118, 20, 0, 1114119, 19, 0, 1114120, 20, 0, 1114121, 19, 0, 1114122, 19, 0, 1114123, 20, 0, 1114124, 19, 0, 1114125, 20, 0, 1114126, 19, 0, 1114127, 20, 0, 1114128, 19, 0, 1114129, 20, 0, 1114130, 20, 0, 1114131, 20, 0, 1114132, 17, 0, 1114133, 0, 327687, 1179648, 0, 262144, 1179649, 10, 0, 1179650, 20, 0, 1179651, 19, 0, 1179652, 19, 0, 1179653, 20, 0, 1179654, 20, 0, 1179655, 20, 0, 1179656, 20, 0, 1179657, 19, 0, 1179658, 20, 0, 1179659, 20, 0, 1179660, 19, 0, 1179661, 20, 0, 1179662, 20, 0, 1179663, 20, 0, 1179664, 19, 0, 1179665, 20, 0, 1179666, 19, 0, 1179667, 19, 0, 1179668, 17, 0, 1179669, 0, 327687, 1245184, 0, 589824, 1245185, 10, 0, 1245186, 20, 0, 1245187, 20, 0, 1245188, 19, 0, 1245189, 20, 0, 1245190, 20, 0, 1245191, 19, 0, 1245192, 19, 0, 1245193, 19, 0, 1245194, 20, 0, 1245195, 20, 0, 1245196, 19, 0, 1245197, 19, 0, 1245198, 19, 0, 1245199, 19, 0, 1245200, 19, 0, 1245201, 20, 0, 1245202, 19, 0, 1245203, 19, 0, 1245204, 17, 0, 1245205, 0, 327687, 1310720, 0, 589824, 1310721, 0, 589825, 1310722, 14, 0, 1310723, 14, 0, 1310724, 14, 0, 1310725, 14, 0, 1310726, 14, 0, 1310727, 14, 0, 1310728, 14, 0, 1310729, 14, 0, 1310730, 14, 0, 1310731, 14, 0, 1310732, 14, 0, 1310733, 14, 0, 1310734, 14, 0, 1310735, 14, 0, 1310736, 14, 0, 1310737, 14, 0, 1310738, 14, 0, 1310739, 14, 0, 1310740, 0, 589830, 1310741, 0, 327687, 1376256, 0, 655360, 1376257, 0, 655366, 1376258, 0, 655366, 1376259, 0, 655366, 1376260, 0, 655366, 1376261, 0, 655366, 1376262, 0, 655366, 1376263, 0, 655366, 1376264, 0, 655366, 1376265, 0, 655366, 1376266, 0, 655366, 1376267, 0, 655366, 1376268, 0, 655366, 1376269, 0, 655366, 1376270, 0, 655366, 1376271, 0, 655366, 1376272, 0, 655366, 1376273, 0, 655366, 1376274, 0, 655366, 1376275, 0, 655366, 1376276, 0, 655366, 1376277, 0, 655367 )

[node name="Player" type="Sprite" parent="."]
unique_name_in_owner = true
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
centered = false

[node name="MapCamera" type="Camera2D" parent="Player"]
unique_name_in_owner = true
scale = Vector2( 5, 5 )
current = true
zoom = Vector2( 0.2, 0.2 )
drag_margin_left = 0.5
drag_margin_top = 0.5
drag_margin_right = 0.5
drag_margin_bottom = 0.5

[node name="Fog" type="Sprite" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource( 3 )
scale = Vector2( 41.3, 35.2 )
texture = SubResource( 4 )
centered = false

[node name="VisibleMap" type="TileMap" parent="."]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.843137 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="ScriptsMap" type="TileMap" parent="."]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.709804 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 131091, 1, 0, 262146, 0, 0, 327685, 2, 0, 655365, 4, 0, 786437, 3, 0 )
